cluster/prod/platform/monitoring/grafana-ingresses/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-internal
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-internal
spec:
  ingressClassName: internal
  tls:
    - hosts: [ "grafana.k8s.lysakermoen.com" ]
      secretName: grafana-internal-tls
  rules:
    - host: grafana.k8s.lysakermoen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: monitoring-grafana, port: { number: 80 } }
